--- a/components/docker-compose.yml
+++ b/components/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - POSTGRES_PASSWORD=suuser
     volumes:
       - ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
+    restart: on-failure
     ports:
       - "5432:5432"
 
@@ -18,6 +19,17 @@ services:
       dockerfile: Dockerfile
     ports:
       - "1234:1234"
+    environment:
+      - POSTGRES_DB_HOST=postgresdb
+    depends_on:
+      - postgresdb
+
+  book_backend:
+    build:
+      context: ./book_backend
+      dockerfile: Dockerfile
+    ports:
+      - "1235:1235"
     environment:
       - POSTGRES_DB_HOST=postgresdb
     depends_on:
