--- a/components/nginx/nginx.conf
+++ b/components/nginx/nginx.conf
@@ -1,13 +1,25 @@
-upstream web {
+upstream user_backend {
     server user_backend:1234;
+}
+
+upstream book_backend {
+    server book_backend:1235;
 }
 
 server {
     listen 80;
-    server_name 127.0.0.1;
+#     server_name 127.0.0.1;
+    server_name myprojec2.com;
 
     location /api/users {
         proxy_pass http://user_backend;
+        proxy_redirect off;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /api/books {
+        proxy_pass http://book_backend;
         proxy_redirect off;
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
