--- a/components/docker-compose.yml
+++ b/components/docker-compose.yml
@@ -44,3 +44,17 @@ services:
       - "443:443"
     depends_on:
       - user_backend
+
+  rabbitmq:
+    image: "rabbitmq:3-management"
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      - RABBITMQ_DEFAULT_USER=user
+      - RABBITMQ_DEFAULT_PASS=password
+    volumes:
+      - "rabbitmq_data:/data"
+
+volumes:
+  rabbitmq_data:
