--- a/components/docker-compose.yml
+++ b/components/docker-compose.yml
@@ -13,6 +13,18 @@ services:
     ports:
       - "5432:5432"
 
+  rabbitmq:
+    image: "rabbitmq:3-management"
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      - RABBITMQ_DEFAULT_USER=user
+      - RABBITMQ_DEFAULT_PASS=password
+
+    volumes:
+      - "rabbitmq_data:/data"
+
   user_backend:
     build:
       context: ./user_backend
@@ -21,8 +33,13 @@ services:
       - "1234:1234"
     environment:
       - POSTGRES_DB_HOST=postgresdb
+#      - RABBITMQ_USER=user
+#      - RABBITMQ_PASSWORD=password
+      - RABBITMQ_HOST=rabbitmq
     depends_on:
       - postgresdb
+      - rabbitmq
+    restart: unless-stopped
 
   book_backend:
     build:
@@ -32,8 +49,27 @@ services:
       - "1235:1235"
     environment:
       - POSTGRES_DB_HOST=postgresdb
+      - RABBITMQ_HOST=rabbitmq
     depends_on:
       - postgresdb
+      - rabbitmq
+    restart: unless-stopped
+
+  issue_backend:
+    build:
+      context: ./issue_backend
+      dockerfile: Dockerfile
+    ports:
+      - "1236:1236"
+    environment:
+      - POSTGRES_DB_HOST=postgresdb
+      - RABBITMQ_HOST=rabbitmq
+    depends_on:
+      - postgresdb
+      - rabbitmq
+    restart: unless-stopped
+
+
 
   nginx:
     build:
@@ -44,17 +80,10 @@ services:
       - "443:443"
     depends_on:
       - user_backend
+      - book_backend
+      - issue_backend
 
-  rabbitmq:
-    image: "rabbitmq:3-management"
-    ports:
-      - "5672:5672"
-      - "15672:15672"
-    environment:
-      - RABBITMQ_DEFAULT_USER=user
-      - RABBITMQ_DEFAULT_PASS=password
-    volumes:
-      - "rabbitmq_data:/data"
+
 
 volumes:
   rabbitmq_data:
