--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker-compose -f components/docker-compose.yml build
+      run: docker-compose -f components/docker-compose.yml build | pytest components/user_backend/tests/unit/application/services/test_user.py
