--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,5 +16,14 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker-compose -f components/docker-compose.yml build 
+      
+    - name: Install package
+      run: python setup.py install
+      
+    - name: Install pytest
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytest
+        
     - name: User tests
       run: pytest components/user_backend/tests/unit/application/services/test_user.py
