--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,4 +23,5 @@ jobs:
         pip install pytest
         
     - name: User tests
-      run: pytest components/user_backend/tests/unit/application/services/test_user.py
+#      run: pytest components/user_backend/tests/unit/application/services/test_user.py
+      run: docker-compose user_backend run python-3 -m test_user.py
