users test from compose

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,4 +23,4 @@ jobs:
         pip install pytest
         
     - name: User tests
-      run: docker-compose run user_backend python-3 -m test_user.py
+      run: docker-compose run user_backend python-3 -m pytest
