--- a/components/user_backend/Dockerfile
+++ b/components/user_backend/Dockerfile
@@ -18,3 +18,5 @@ RUN pip install --upgrade -e '.[dev]'
 COPY . .
 
 ENTRYPOINT ["gunicorn","-b","0.0.0.0:1234", "user.composites.user_api:app", "--reload"]
+
+COPY . .
