users/issues/books tests from compose

--- a/components/book_backend/Dockerfile
+++ b/components/book_backend/Dockerfile
@@ -15,4 +15,4 @@ RUN pip install --upgrade -e '.[dev]'
 
 COPY . .
 
-ENTRYPOINT ["gunicorn","-b","0.0.0.0:1235", "book.composites.book_api:app", "--reload"]
+CMD ["gunicorn","-b","0.0.0.0:1235", "book.composites.book_api:app", "--reload"]
