--- a/components/issue_backend/Dockerfile
+++ b/components/issue_backend/Dockerfile
@@ -17,4 +17,4 @@ RUN pip install --upgrade -e '.[dev]'
 
 COPY . .
 
-ENTRYPOINT ["gunicorn","-b","0.0.0.0:1236", "issue.composites.issue_api:app", "--reload"]
+CMD ["gunicorn","-b","0.0.0.0:1236", "issue.composites.issue_api:app", "--reload"]
