--- a/components/user_backend/Dockerfile
+++ b/components/user_backend/Dockerfile
@@ -17,6 +17,6 @@ RUN pip install --upgrade -e '.[dev]'
 
 COPY . .
 
-ENTRYPOINT ["gunicorn","-b","0.0.0.0:1234", "user.composites.user_api:app", "--reload"]
+CMD ["gunicorn","-b","0.0.0.0:1234", "user.composites.user_api:app", "--reload"]
 
 COPY . .
