--- a/components/docker-compose.yml
+++ b/components/docker-compose.yml
@@ -33,8 +33,8 @@ services:
       - "1234:1234"
     environment:
       - POSTGRES_DB_HOST=postgresdb
-#      - RABBITMQ_USER=user
-#      - RABBITMQ_PASSWORD=password
+      - RABBITMQ_USER=user
+      - RABBITMQ_PASSWORD=password
       - RABBITMQ_HOST=rabbitmq
     depends_on:
       - postgresdb
@@ -49,6 +49,8 @@ services:
       - "1235:1235"
     environment:
       - POSTGRES_DB_HOST=postgresdb
+      - RABBITMQ_USER=user
+      - RABBITMQ_PASSWORD=password
       - RABBITMQ_HOST=rabbitmq
     depends_on:
       - postgresdb
@@ -63,6 +65,8 @@ services:
       - "1236:1236"
     environment:
       - POSTGRES_DB_HOST=postgresdb
+      - RABBITMQ_USER=user
+      - RABBITMQ_PASSWORD=password
       - RABBITMQ_HOST=rabbitmq
     depends_on:
       - postgresdb
