--- a/components/issue_backend/setup.cfg
+++ b/components/issue_backend/setup.cfg
@@ -20,6 +20,7 @@ install_requires =
     gunicorn~=20.0.0
     click~=7.1.0
     backports.cached-property~=1.0.1
+    psycopg2-binary~=2.9.2
     python-json-logger
     classic-components
     classic-aspects
@@ -30,6 +31,7 @@ install_requires =
     classic-messaging
     classic-messaging-kombu
 
+
 [options.extras_require]
 dev =
     pytest~=6.2.5
@@ -39,4 +41,4 @@ dev =
 
 [options.entry_points]
 console_scripts =
-    simple_shop=simple_shop.composites.cli:cli
+    issue_backend=issue_backend.composites.cli:cli
