--- a/components/book_backend/setup.cfg
+++ b/components/book_backend/setup.cfg
@@ -18,6 +18,7 @@ install_requires =
     sqlalchemy~=1.4.23
     alembic~=1.7.0
     gunicorn~=20.0.0
+    psycopg2-binary~=2.9.2
     click~=7.1.0
     python-json-logger
     classic-components
