--- a/components/user_backend/setup.cfg
+++ b/components/user_backend/setup.cfg
@@ -20,6 +20,7 @@ install_requires =
     gunicorn~=20.0.0
     click~=7.1.0
     backports.cached-property~=1.0.1
+    psycopg2-binary~=2.9.2
     python-json-logger
     classic-components
     classic-aspects
